# nagini

./: Cargo.toml
nagini/: Cargo.toml
nagini/examples/: framework.rs  particles.comp  particles.rs  particles.vert
nagini_derive/: Cargo.toml
nagini_derive/src/: lib.rs
nagini_derive/tests/: parse.rs  runner.rs
nagini_internal/: Cargo.toml
nagini_internal/src/: lib.rs
nagini_types/: Cargo.toml
