[package]
name = "nagini_derive"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0"
naga = { version = "0.2", features = ["glsl", "spirv"] }
nagini_internal = { version = "=0.1.0", path = "../nagini_internal"}
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
trybuild = "1.0"