[package]
name = "nagini_internal"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
naga = "0.2"
serde = { version = "1.0", features = ["derive"]}
ron = "0.6"

[dev-dependencies]
wgpu = "0.6"
wgpu-subscriber = "0.1"